<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="20dp"
    tools:context=".MainActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_melhor_combust_vel2"
        android:textSize="22sp"
        android:textColor="@color/colorTextPrimary"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"/>

    <!-- Consumo na Gasolina -->
    <LinearLayout
        android:id="@+id/consumoGasolinaLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/txtTitulo"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/etFirstConsume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/consumo_gasolina_km_l"
            android:inputType="numberDecimal"
            android:textColor="@color/colorTextPrimary"
            android:padding="10dp"
            android:background="@drawable/edittext_background"/>

        <Button
            android:id="@+id/btnBuscarGasolina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buscar_first"
            android:onClick="btListarOnClick"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorTextButton"
            android:padding="10dp"/>
    </LinearLayout>

    <!-- Consumo no Álcool -->
    <LinearLayout
        android:id="@+id/consumoAlcoolLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/consumoGasolinaLayout"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/etFieldSecoundConsume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/consumo_lcool_km_l"
            android:inputType="numberDecimal"
            android:textColor="@color/colorTextPrimary"
            android:padding="10dp"
            android:background="@drawable/edittext_background"/>

        <Button
            android:id="@+id/btFirstBuscar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buscar"
            android:onClick="btListarOnClick"
            android:layout_marginStart="10dp"
            android:backgroundTint="@color/colorAccent"
            android:textColor="@color/colorTextButton"
            android:padding="10dp"/>
    </LinearLayout>

    <!-- Valor da Gasolina -->
    <EditText
        android:id="@+id/etValorGasolina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor_da_gasolina_r"
        android:inputType="numberDecimal"
        android:textColor="@color/colorTextPrimary"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/consumoAlcoolLayout"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background"/>

    <!-- Valor do Álcool -->
    <EditText
        android:id="@+id/etValorAlcool"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor_do_lcool_r"
        android:inputType="numberDecimal"
        android:textColor="@color/colorTextPrimary"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/etValorGasolina"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_background"/>

    <!-- Botão Calcular -->
    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular_melhor_combust_vel"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/etValorAlcool"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorTextButton"
        android:padding="10dp"/>

    <!-- Resultado -->
    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:textSize="18sp"
        android:textColor="@color/colorTextPrimary"
        app:layout_constraintTop_toBottomOf="@id/btnCalcular"
        android:layout_marginTop="30dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>