<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:padding="20dp">

    <!-- Ícone do App -->
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_fuel"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"
        android:layout_marginTop="50dp"/>

    <!-- Título -->
    <TextView
        android:id="@+id/txtTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fuelcalc_qual_o_melhor_combust_vel"
        android:textSize="22sp"
        android:textColor="@color/colorTextPrimary"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_below="@id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <!-- Descrição -->
    <TextView
        android:id="@+id/txtDescricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descubra_qual_combust_vel_compensa_mais_para_abastecer_seu_ve_culo"
        android:textSize="16sp"
        android:textColor="@color/colorTextSecondary"
        android:gravity="center"
        android:layout_below="@id/txtTitulo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <!-- Botão Calcular -->
    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular_melhor_combust"
        android:onClick="btCalcularOnClick"
        android:textSize="16sp"
        android:backgroundTint="@color/colorButtonBackground"
        android:textColor="@color/colorTextButton"
        android:layout_below="@id/txtDescricao"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

</RelativeLayout>